# 24205-obmetko-oop-cpp

./: .gitignire  .gitignore  BitArray.cpp  BitArray.h  CMakeLists.txt  main.cpp  test_bitarray.cpp  test_csvwriter.cpp  test_filereader.cpp
include/: game.h  rule.h  universe.h
src/: game.cpp  main.cpp  rule.cpp  universe.cpp
src/CSVWriter/: CSVWriter.cpp  CSVWriter.h
src/FileReader/: FileReader.cpp  FileReader.h
src/LineParser/: LineParser.cpp  LineParser.h
src/WordCounter/: WordCounter.cpp
src/WordStatistics/: WordStatistics.cpp  WordStatistics.h
task-0/: CMakeLists.txt
task-0/data/: out.csv
task-0b/: 1.txt  CMakeLists.txt  CSVWriter.cpp  CSVWriter.h  FileReader.cpp  WordCounter.cpp  WordCounter.h  in.txt  main.cpp  test_csvwriter.cpp  test_filereader.cpp  test_wordcounter.cpp
task-1/: BitArray.cpp  main.cpp  test_bitarray.cpp
task-2/: .clangd  CMakeLists.txt
task-2/.dist/: .ninja_deps  .ninja_log  build.ninja
task-2/.dist/include/: universe.h
task-2/include/: Command.h  CommandQualifier.h  Commands.h  Commands.hpp  GameOfLifeEngine.h  game.h  universe.h
task-2/src/: CommandQualifier.cpp  Commands.cpp  GameOfLifeEngine.cpp  game.cpp  main.cpp  universe.cpp
task-2/tests/: test_rule.cpp  test_universe.cpp
tests/: test_csvwriter.cpp  test_wordcounter.cpp
